fixed the pdf issue but still formats weirdly on different screen sizes, also I adjusted the spacing for the pie charts

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -3,7 +3,7 @@
   display: flex;
   width: 100%;
   height: 10%;
-  color: #red;
+  color: red;
   font-family: Helvetica;
  
 }
@@ -48,7 +48,7 @@
 @media only screen and (max-width:728px) {
    .outermost {
     width: 1500px;
-    margin-bottom: 20px;
+    margin-bottom: 100px;
   }
 }
 
