--- a/src/Components/Chart/Chart.css
+++ b/src/Components/Chart/Chart.css
@@ -6,8 +6,9 @@
   height: 60vh; /* Adjust the height based on your needs */
   margin-top: 20px;
   width: 60vh;
-  margin-left: 30px;  
+    
   font-weight: bold;
+  margin-right: 40px;
   
  
   
@@ -96,22 +97,28 @@
 .Wrapper {
     margin: 0 auto; /* Center the boxes horizontally */
   margin-bottom: 30px; /* Add some space between charts */
-  margin-left: 80px; 
+  margin-left: 7%; 
   margin-bottom: 220px;
+  
+  
  
 }
 
+@media only screen and (max-width: 1100px) {
+    .Wrapper {
+        margin-left: 21%;
+    }
+}
+
+
+
 /* Adjust labels and styles for mobile */
-@media only screen and (max-width: 728px) {
+@media only screen and (max-width: 828px) {
   .Wrapper {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    margin-left: 20px;
-    margin-bottom: 120px;
-    margin-top: 50px;
-
-
+    margin-left: 16%;
+    
+    
   }
 
   .column {
@@ -120,7 +127,7 @@
 
 
   .container1 {
-    font-size: 10px;
+    font-size: 12px;
   }
 
   .l1 {
